# ctest-fortran-unittest

./: CMakeLists.txt  LICENSE  README.rst
tests/: test_fails_1.f90  test_succeeds_1.f90
